# mianshibao

./: .gitattributes  .gitignore  docker-compose.yml  mianshibao.docx  readme.md  requirement.txt  ~$anshibao.docx  简历分析及token优化.md  问题汇总.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260310_01_phase2_core_schema.py  20260311_01_phase5_fts_column.py  20260311_02_job_position_tables.py  20260311_03_knowledge_scope.py  20260312_01_stage6_interview_engine.py  20260313_01_resume_file_hash.py  20260317_01_knowledge_learning_and_library.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  interview.py  interview_ws.py  knowledge.py  resume.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  response.py  security.py
backend/app/models/: __init__.py  interview_message.py  interview_report.py  interview_session.py  job_category.py  job_position.py  knowledge_bookmark.py  knowledge_category.py  knowledge_learning_progress.py  knowledge_point.py  position_knowledge.py  resume.py  resume_template.py  user.py  wrong_question.py
backend/app/prompts/: interviewer.txt  rag_qa.txt  resume_parser.txt  resume_scorer.txt
backend/app/prompts/interview/: candidate_question_response.md  report_generation.md  resume_dig_question.md  tech_qa_question.md  welcome.md
backend/app/prompts/knowledge/: rag_answer.md
backend/app/prompts/resume/: optimize.md  parse_structured.md  score.md
backend/app/providers/: ai.py  cache.py  checkpointer.py  embedding.py  llm_factory.py  reranker.py  sms.py  storage.py  vector_store.py
backend/app/providers/llm/: __init__.py  base.py  fallback_provider.py  qwen_provider.py
backend/app/schemas/: auth.py  common.py  interview.py  knowledge.py  resume.py
backend/app/services/: auth_service.py  interview_graph.py  interview_service.py  knowledge_service.py  resume_service.py
backend/app/utils/: exceptions.py  file_parser.py  prompt_manager.py  text_splitter.py
backend/data/: sample_knowledge.json
backend/scripts/: create_demo_user.py  ingest_knowledge.py  init_templates.py  reindex_knowledge_fts.py  run_stage4_acceptance.py  sample_ingest.py
backend/tests/services/: test_interview_graph.py  test_interview_graph_langgraph_integration.py  test_knowledge_service_library.py  test_resume_workflow.py
docs/: api.md  database.md
(+53 files in other folders)
